[gd_scene load_steps=12 format=3 uid="uid://dji8tkhu6rqlk"]

[ext_resource type="Script" path="res://meeple.gd" id="1_m35lp"]
[ext_resource type="Texture2D" uid="uid://bsakve8i4ysuu" path="res://art/Arrow.svg" id="2_ubigo"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t1iik"]
vertex_color_use_as_albedo = true
albedo_color = Color(9.62615e-08, 0.545839, 0.317669, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_s750j"]
material = SubResource("StandardMaterial3D_t1iik")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kjp6h"]
transparency = 1
vertex_color_use_as_albedo = true
albedo_color = Color(0.157426, 0.524981, 0.255177, 0.168627)

[sub_resource type="CylinderMesh" id="CylinderMesh_7hwow"]
material = SubResource("StandardMaterial3D_kjp6h")
top_radius = 5.0
bottom_radius = 5.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qhtxp"]
radius = 5.0

[sub_resource type="Animation" id="Animation_aqqws"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshCharacter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionIndicator:transparency")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_34202"]
resource_name = "move"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshCharacter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1.41421, 0.5, 4.75683),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.25, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_7nfow"]
resource_name = "spawn"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionIndicator:transparency")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 1.83333),
"transitions": PackedFloat32Array(4.75683, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.06667, 1.86667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshCharacter:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0, -2, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dkfpx"]
_data = {
"RESET": SubResource("Animation_aqqws"),
"move": SubResource("Animation_34202"),
"spawn": SubResource("Animation_7nfow")
}

[node name="Meeple" type="Area3D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_m35lp")

[node name="MeshCharacter" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_s750j")

[node name="CollisionIndicator" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.918825, 0)
mesh = SubResource("CylinderMesh_7hwow")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.952975, 0)
shape = SubResource("CylinderShape3D_qhtxp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dkfpx")
}

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="Sprite2D" type="Sprite2D" parent="Control"]
position = Vector2(12, 38)
scale = Vector2(0.218994, 0.218994)
texture = ExtResource("2_ubigo")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
